[package]
name = "hello-world"
version = "0.1.0"
authors = ["mni"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
actix-rt = "1.1.0"
serde = "1.0.106"
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
env_logger = "0.7.1"
diesel = { version="1.4.5", features=["postgres", "chrono", "r2d2", "uuid"]}
dotenv="0.15.0"
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
